# AeroTerrainBot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  setup_env.ps1
aeroterrabot_ws/: README.md
aeroterrabot_ws/src/aeroterrabot_bringup/: CMakeLists.txt  package.xml
aeroterrabot_ws/src/aeroterrabot_bringup/launch/: bringup.launch.py  navigation.launch.py  simulation.launch.py  transition_demo.launch.py
aeroterrabot_ws/src/aeroterrabot_control/: CMakeLists.txt  package.xml
aeroterrabot_ws/src/aeroterrabot_control/config/: controllers.yaml
aeroterrabot_ws/src/aeroterrabot_control/launch/: control.launch.py  controllers.launch.py
aeroterrabot_ws/src/aeroterrabot_description/: CMakeLists.txt  package.xml
aeroterrabot_ws/src/aeroterrabot_description/launch/: display.launch.py
aeroterrabot_ws/src/aeroterrabot_description/rviz/: aeroterrabot_visualization.rviz  view_robot.rviz
aeroterrabot_ws/src/aeroterrabot_description/urdf/: aeroterrabot.urdf.xacro  inertias.xacro  materials.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  sensors.xacro
aeroterrabot_ws/src/aeroterrabot_flight_system/: CMakeLists.txt  package.xml
aeroterrabot_ws/src/aeroterrabot_flight_system/launch/: px4_sitl_aeroterrabot.launch.py
aeroterrabot_ws/src/aeroterrabot_flight_system/src/: offboard_hover.cpp
aeroterrabot_ws/src/aeroterrabot_gazebo/: CMakeLists.txt  package.xml
aeroterrabot_ws/src/aeroterrabot_gazebo/launch/: gazebo.launch.py  spawn_aeroterrabot.launch.py
aeroterrabot_ws/src/aeroterrabot_gazebo/worlds/: aeroterrabot.world  aeroterrabot_world.world  hybrid_transition.world
aeroterrabot_ws/src/aeroterrabot_hardware/: CMakeLists.txt  aeroterrabot_hardware.xml  package.xml
aeroterrabot_ws/src/aeroterrabot_hardware/include/aeroterrabot_hardware/: aeroterrabot_system_interface.hpp
aeroterrabot_ws/src/aeroterrabot_hardware/src/: aeroterrabot_system_interface.cpp  sensor_bridge_node.cpp
aeroterrabot_ws/src/aeroterrabot_interfaces/: CMakeLists.txt  package.xml
aeroterrabot_ws/src/aeroterrabot_interfaces/msg/: MorphMode.msg  MorphState.msg  SensorArray.msg  SystemStatus.msg  TransformState.msg
aeroterrabot_ws/src/aeroterrabot_navigation/: CMakeLists.txt  package.xml
aeroterrabot_ws/src/aeroterrabot_navigation/config/: nav2_params.yaml
aeroterrabot_ws/src/aeroterrabot_navigation/launch/: nav2_bringup.launch.py
aeroterrabot_ws/src/aeroterrabot_transform_controller/: CMakeLists.txt  package.xml
aeroterrabot_ws/src/aeroterrabot_transform_controller/launch/: transform_controller.launch.py
aeroterrabot_ws/src/aeroterrabot_transform_controller/src/: transform_controller.cpp
