<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aeroterrabot_gazebo</name>
  <version>1.0.0</version>
  <description>Gazebo simulation launch and world files for AeroTerraBot</description>
  <maintainer email="aeroterrabot@dev.local">AeroTerraBot Dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>aeroterrabot_description</depend>
  <depend>aeroterrabot_control</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
