<?xml version="1.0"?>
<package format="3">
  <name>aeroterrabot_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo simulation integration for AeroTerraBot.</description>
  <maintainer email="user@todo.todo">USER</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>aeroterrabot_description</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
