<?xml version="1.0"?>
<package format="3">
  <name>aeroterrabot_navigation</name>
  <version>0.0.1</version>
  <description>Navigation configuration (Nav2) for AeroTerraBot.</description>
  <maintainer email="user@todo.todo">USER</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
